Agora o invoce recebe um tipo de operacao